[package]
name = "iterator_item_macros"
version = "0.1.0"
authors = ["Esteban Küber <esteban@kuber.com.ar>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/estebank/iterator_item"
description = "proc macros for the iterator_item crate"

[dependencies]
quote = "1"
syn = { version = "1", features = ["full", "visit-mut", "parsing", "fold"] }
proc-macro2 = "1"

[lib]
proc-macro = true

